change gian's code to something else Signed-off-by:shermainesy <shermaine_sy@dlsu.edu.ph>

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,13 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
 file.reference.junit-4.10.jar=lib/junit-4.10.jar
 file.reference.mysql-connector-java-5.1.36-bin.jar=lib/mysql-connector-java-5.1.36-bin.jar
+file.reference.poi-3.5-FINAL-sources.jar=lib/poi-3.5-FINAL-sources.jar
+file.reference.poi-3.8-beta4-20110826.jar=lib/poi-3.8-beta4-20110826.jar
+file.reference.poi-ooxml-3.9.jar=lib/poi-ooxml-3.9.jar
+file.reference.xmlbeans-2.6.0.jar=lib/xmlbeans-2.6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +45,12 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.junit-4.10.jar}:\
-    ${file.reference.mysql-connector-java-5.1.36-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.36-bin.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.poi-ooxml-3.9.jar}:\
+    ${file.reference.poi-3.5-FINAL-sources.jar}:\
+    ${file.reference.poi-3.8-beta4-20110826.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
