--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>logout</servlet-name>
         <servlet-class>Servlets.logout</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UploadToDatabase</servlet-name>
+        <servlet-class>ServletsUpload.UploadToDatabase</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>logout</servlet-name>
         <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UploadToDatabase</servlet-name>
+        <url-pattern>/UploadToDatabase</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
