--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>UploaderServlet</servlet-name>
         <servlet-class>ServletsUpload.UploaderServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UploadKinderPublic</servlet-name>
+        <servlet-class>ServletsUpload.UploadKinderPublic</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>UploaderServlet</servlet-name>
         <url-pattern>/Uploader</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UploadKinderPublic</servlet-name>
+        <url-pattern>/UploadKinderPublic</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
