--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -25,8 +25,16 @@
         <servlet-class>ServletsDemo.UploaderServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>UploadKinderPublic</servlet-name>
-        <servlet-class>ServletsUpload.UploadKinderPublic</servlet-class>
+        <servlet-name>SerlvetAccess</servlet-name>
+        <servlet-class>ServletAccess.SerlvetAccess</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ValiAgeByGrpServ</servlet-name>
+        <servlet-class>ServletsDemo.ValiAgeByGrpServ</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>BaseServlet</servlet-name>
+        <servlet-class>Servlets.BaseServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
@@ -53,8 +61,16 @@
         <url-pattern>/UploaderServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>UploadKinderPublic</servlet-name>
-        <url-pattern>/UploadKinderPublic</url-pattern>
+        <servlet-name>SerlvetAccess</servlet-name>
+        <url-pattern>/SerlvetAccess</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ValiAgeByGrpServ</servlet-name>
+        <url-pattern>/ValiAgeByGrpServ</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>BaseServlet</servlet-name>
+        <url-pattern>/BaseServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
