--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>BaseServlet</servlet-name>
         <servlet-class>Servlets.BaseServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UploadMaritalStatus</servlet-name>
+        <servlet-class>ServletsDemo.UploadMaritalStatus</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -55,6 +59,10 @@
     <servlet-mapping>
         <servlet-name>BaseServlet</servlet-name>
         <url-pattern>/BaseServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UploadMaritalStatus</servlet-name>
+        <url-pattern>/UploadMaritalStatus</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
