--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>UploadMaritalStatus</servlet-name>
         <servlet-class>ServletsDemo.UploadMaritalStatus</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UploadHighestAttainment</servlet-name>
+        <servlet-class>ServletsDemo.UploadHighestAttainment</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>UploadMaritalStatus</servlet-name>
         <url-pattern>/UploadMaritalStatus</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UploadHighestAttainment</servlet-name>
+        <url-pattern>/UploadHighestAttainment</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
