--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>UploadHighestAttainment</servlet-name>
         <servlet-class>ServletsDemo.UploadHighestAttainment</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ValiMaritalStatus</servlet-name>
+        <servlet-class>ServletsDemo.ValiMaritalStatus</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -71,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>UploadHighestAttainment</servlet-name>
         <url-pattern>/UploadHighestAttainment</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ValiMaritalStatus</servlet-name>
+        <url-pattern>/ValiMaritalStatus</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
