--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,6 +44,10 @@
         <servlet-name>RetrieveDataDemoServlet</servlet-name>
         <servlet-class>ServletsDemo.RetrieveDataDemoServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ViewArchivesTableCharts</servlet-name>
+        <servlet-class>ServletsDemo.ViewArchivesTableCharts</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -87,6 +91,10 @@
     <servlet-mapping>
         <servlet-name>RetrieveDataDemoServlet</servlet-name>
         <url-pattern>/RetrieveDataDemoServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewArchivesTableCharts</servlet-name>
+        <url-pattern>/ViewArchivesTableCharts</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
